2009-10-29  Dan Bernstein  <mitz@apple.com>

        Tiger build fix after r50259

        * platform/graphics/mac/ComplexTextControllerATSUI.cpp:

2009-10-28  Steve Falkenburg  <sfalken@apple.com>

        Rubber stamped by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=30899
        WebKit fails to build release on 32-bit Windows systems

        * WebCore.vcproj/WebCore.vcproj: Excluded files from project.
        * bindings/js/JSBindingsAllInOne.cpp: Added.

2009-10-28  Dan Bernstein  <mitz@apple.com>

        Reviewed by Jon Honeycutt.

        Fixed typos in color names.

        * inspector/front-end/Color.js:

2009-10-28  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Share code between the ATSUI- and Core Text-based Font implementations by doing the
        following:
        - Generalize CoreTextController as ComplexTextController, keeping the Core Text-specific
          parts in ComplexTextControllerCoreText.cpp.
        - Generalize FontMacCoreText as FontComplexTextMac using ComplexTextController
        - Implement ATSUI-specific parts of ComplexTextController in ComplexTextControllerATSUI.
        - Remove FontMacATSUI.

        * WebCore.xcodeproj/project.pbxproj: Removed CoreTextController.{cpp,h}, FontMacATSUI.mm,
        and FontMacCoreText.cpp, and added ComplexTextController.{cpp,h},
        ComplexTextControllerATSUI.cpp, ComplexTextControllerCoreText.cpp, and
        FontComplexTextMac.cpp.

        * platform/graphics/mac/ComplexTextController.cpp: Copied from CoreTextController.cpp and
        kept the non-Core Text-specific bits.
        (WebCore::ComplexTextController::ComplexTextController): Updated for renames, including
        its own.
        (WebCore::ComplexTextController::offsetForPosition): Updated for renames and for
        m_complexTextRuns holding references instead of objects.
        (WebCore::ComplexTextController::collectComplexTextRuns): Updated for renames, including