@@ -2,6 +2,13 @@
 
         Tiger build fix after r50259
 
+        * platform/graphics/mac/ComplexTextController.h:
+        * platform/graphics/mac/ComplexTextControllerATSUI.cpp:
+
+2009-10-29  Dan Bernstein  <mitz@apple.com>
+
+        Attempted Tiger build fix after r50259
+
         * platform/graphics/mac/ComplexTextControllerATSUI.cpp:
 
 2009-10-28  Steve Falkenburg  <sfalken@apple.com>
